[package]
name = "filetime"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.2.4"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["timestamp", "mtime"]
repository = "https://github.com/alexcrichton/filetime"
homepage = "https://github.com/alexcrichton/filetime"
documentation = "https://docs.rs/filetime"
description = """
Platform-agnostic accessors of timestamps in File metadata
"""

[dependencies]
cfg-if = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"

[dev-dependencies]
tempdir = "0.3"

[features]
# On Unix platforms, forces the use of the `utimensat` syscall rather than the
# older `utimes`. This will expose functions for setting only the mtime or only
# the atime for a file, but will cause panics if `utimensat` cannot be called.
utimensat = []
