[package]
name = "filetime"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.2.16"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["timestamp", "mtime"]
repository = "https://github.com/alexcrichton/filetime"
homepage = "https://github.com/alexcrichton/filetime"
documentation = "https://docs.rs/filetime"
description = """
Platform-agnostic accessors of timestamps in File metadata
"""
edition = "2018"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.27"

[target.'cfg(windows)'.dependencies]
winapi = { version = '0.3', features = ['fileapi', 'minwindef', 'winbase'] }

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.2.9"

[dev-dependencies]
tempfile = "3"
